# cave_sketch

./: .coverage  .gitignore  .pre-commit-config.yaml  DEVLOG.md  GEMINI.md  README.it.md  README.md  app.py  create_kml.py  main.py  merge_surveys.py  pyproject.toml  requirements-mobile.txt  requirements.txt  sample_cave.kml
.gemini/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
android/: DEVLOG.md  RELEASE.md  build.gradle  keystore.properties.template  settings.gradle
app/: app.py  session.py
cave_sketch/: __init__.py  parse_dxf.py  style.py  survey.py
cave_sketch/geo/: kml.py  (+3 more)
conductor/: phase2b.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
scripts/: check_mobile_env.sh
specs/: code_refactoring_plan.md
tests/: test_chaining.py  test_dxf_parser.py  test_georef.py  test_gps_points.py  test_grid.py  test_kml.py  test_kmz_export.py  test_merger.py  test_parse_coordinate.py  test_placement.py  test_placement_refined.py  test_render_features.py  test_render_regression.py  test_rule_grid_snap.py  test_sanitize_filename.py  test_satellite_bridge.py  test_satellite_map.py  test_settings_panel.py  test_show_centerline.py  test_sidebar.py  test_survey_bridge.py  test_survey_metrics.py  test_survey_plot.py  test_survey_plot_placement.py  test_survey_rendering.py  test_survey_section_scale_bar.py  test_title_block.py  test_title_block_integration.py
utility_scripts/: dxf_3D_vizualization.py  generate_cave_mesh.py  test.py  test_kml_export.py  verify_placement.py  verify_refined_placement.py  verify_survey_plot_placement.py
(+239 files in other folders)
