[project]
name = "cave-sketch"
version = "0.1.0"
description = "A Streamlit app for cavers to generate survey plots from TopoDroid DXF exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf==1.4.1",
    "folium==0.19.5",
    "matplotlib==3.10.3",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "streamlit==1.45.1",
    "watchdog==6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
exclude = ["utility_scripts", "merge_surveys.py"]

[tool.mypy]
strict = false
ignore_missing_imports = true
